--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -459,3 +459,136 @@ a {
       font-size: 20px;
     }
 }
+
+@media (max-width: 500px){
+
+    #message{
+        font-size: 12px;
+        line-height: normal;
+        padding: 5% 0 0 0;
+        text-align: center;
+        line-height: 20px;
+    }
+    #links{
+        align-self: flex-start;
+        margin-left: 8%;
+        padding-top: 3%;
+
+    }
+    .head{
+        flex-direction: column;
+    }
+    .random-graphic{
+        width: 75%;
+        top: 0;
+    }
+    .random-graphic2{
+        width: 75%;
+        top: 200px;
+    }
+    .sectionTitle{
+        font-size: 50px;
+    }
+    .welcomeMessage{
+        margin-left: 8%;
+        padding: 8% 0 0 0;
+    }
+    #text1{
+        font-size: 25px;
+    }
+    #text2{
+        font-size: 25px;
+    }
+
+
+
+
+
+
+    .skillsText p
+    {
+      font-size: 20px;
+      margin-left: 0 auto;
+    }
+    #content{
+        flex-direction: column;
+        height: 110%;
+        margin-top: 5%;
+    }
+    #greatAt {
+        margin-left: 0;
+        width: 100%;
+        height: 1500px;
+    }
+    #interested {
+        margin-top: 20px;
+        margin-left: 0;
+        width: 100%;
+        height: 1500px;
+    }
+    .skillImages{
+        height: 30%;
+        width: 20%;
+    }
+
+    .skillImages2{
+        height: 30%;
+        width: 20%;
+    }
+    #secondRow1{
+        margin-top: 30px;
+    }
+    #secondRow2{
+        margin-top: 30px;
+    }
+    .anchorTag {
+        width: 20%;
+        height: 5%;
+    }
+    .socialImages {
+        height: 100%;
+        width: 100%;
+    }
+    .social{
+        width: 50%;
+    }
+    .minus{
+        display: none;
+    }
+    #minusPic2{
+        display: none;
+    }
+    #section-2-background{
+        height: 850px;
+    }
+
+
+
+
+    .project{
+      width: 250px;
+      height: 250px;
+      margin: 0 auto;
+      margin-top: 20px;
+    }
+    #projects-container{
+        flex-direction: column;
+        margin-top: 400px;
+    }
+    #section-3{
+      margin-top: 3%;
+      height: 400px;
+      margin-bottom: 475px;
+    }
+    .text-description{
+        height: 250px;
+        bottom: 250px;
+    }
+    .text-transition{
+        font-size: 14px;
+        margin-top: 10%;
+    }
+    #larger-text{
+        font-size: 14px;
+    }
+}
