--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -530,7 +530,7 @@ a {
         height: 1500px;
     }
     .skillImages{
-        height: 30%;
+        /*height: 30%;*/
         width: 20%;
     }
 
