--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -532,11 +532,13 @@ a {
     .skillImages{
         /*height: 30%;*/
         width: 20%;
+        max-height: 90px;
     }
 
     .skillImages2{
-        height: 30%;
+        /*height: 30%;*/
         width: 20%;
+        max-height: 90px; 
     }
     #secondRow1{
         margin-top: 30px;
