changed image pictures

--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,11 @@ a{
 }
 
 #book42019{ 
-    background-image: url(https://images.pexels.com/photos/428427/pexels-photo-428427.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500); 
+    background-image: url(https://images.thenile.io/r1000/9781423646792.jpg); 
+}
+
+#book52019{ 
+    background-image: url(https://akosmed.files.wordpress.com/2015/04/71jy-fvzel-_sl1500_.jpg); 
 }
 
 .booknoRepeat{
