--- a/styles.css
+++ b/styles.css
@@ -1,425 +1,93 @@
 *{
-    font-family: 'Roboto', sans-serif; 
     padding: 0; 
     margin: 0;
     box-sizing: border-box; 
 }
 
-html{
-    height:auto;
+html,body{
+
 }
-.topNav{
-    margin: 0% 5%; 
-    height: 15vh;
-    background-color: white; 
+.background {
+    position:absolute;
+    display:block;
+    top:0; 
+    left:0;
+    z-index: 0;
+    background-color:#2EC4B6
 }
 
-.navButtons{
-    width: 50%; 
-    height: 15vh;  
-    margin: 0 auto; 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around; 
+.container{
+    position:absolute; 
+    width: 600px; 
+    margin: 10vh auto;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    background-color: #4C6085;
+    height: auto;
+    z-index: 1;
+
+    left:0;
+    right:0;
+     /*I created the bos shadow with   */
+    -webkit-box-shadow: 0px 11px 32px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 11px 32px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 11px 32px -4px rgba(0,0,0,0.75);
 }
 
-.white{
-    color: white; 
-}
-
-li{
-    list-style: none; 
-    color: #022F40; 
-    font-size: 1em; 
-    align-self: center; 
-}
-
-a{
-    text-decoration: none; 
-    color: #022F40; 
-    font-size: 1em; 
-    align-self: center; 
-}
-
-#underline{
-    border-bottom: 3px solid #00C9B6; 
-}
-.wrapper{
-    margin: 0% 5%;
-    /* background-color: lightgrey;  */
-    height: auto; 
-}
-
-.hero{
-    height: 80vh;
-    background-color: #00C9B6;  
-}
-.title{
-    font-weight: 100; 
-    color: white; 
-    font-size: 3.74em; 
-    letter-spacing: 0.438em;  
-    text-align: center; 
-    padding-top: 30vh;  
-}
-
-.iconDown{
-    text-align: center; 
-    color: white; 
-    font-size: 2em;  
-    width:100%;
-    padding-top: 30vh; 
-}
-
-.flexRow{
-    display: flex; 
-    flex-direction: row; 
-    justify-content: space-between;
-}
-
-.flexColumn{
-    display: flex; 
-    flex-direction: column; 
-    justify-content: space-around;
-}
-
-#secondRow{
-    margin-top: 5vh; 
-}
-
-.yearBox{
-    width: 47.5%;
-    height: 50vh; 
-    margin-top: 5vh;  
-}
-
-#year2019{
-    background-image: url(https://images.unsplash.com/photo-1526170160160-1a5eb242ab58?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80); 
-    background-size: cover;
+.screen{
+    height: 50px; 
+    background-color: grey; 
 
 }
 
-#year2018{
-    background-image: url(https://images.unsplash.com/photo-1489359337130-59cfeeccc6c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80); 
-    background-size: cover;  
+.morePadding{
+    padding-left:15px;
+    padding-right:15px; 
 }
 
-.subTitle{
-    font-weight: 300;
-    color: #022F40;
-    font-size: 2em; 
-    letter-spacing: 1px; 
-    text-align: center; 
-    margin-top: 10vh; 
+.infoScreen{
 }
 
-.readingList{
-    margin-top: 5vh; 
-    background-color: #F4D58D; 
-    height: 30vh; 
-    width: 20%; 
+.btn-secondary{
+    color: #fff;
+    background-color: #2EC4B6;
+    border-color: #2EC4B6;
 }
 
-.currentlyReading{
-    margin-top: 5vh; 
-    height: 50vh; 
-    width: 65%;
-    background-color: #F4D58D; 
-    justify-content: space-around; 
+.btn-light{
+    background-color: #e2e3e5;
+    border-color: #e2e3e5; 
 }
 
-.readingList{
-    margin-top: 5vh; 
-    height: 50vh; 
-    width: 100%;
-    width: 30%;
-    background-color: lightblue; 
-}
-
-#bookImage{
-    height: 40vh;
-    width: 30%; 
-    align-self: center;
-    margin-left: 5%; 
-    background-image: url(https://images-na.ssl-images-amazon.com/images/I/71w%2B-kcAbML.jpg); 
-    background-size:cover;  
-    background-repeat: no-repeat; 
-    -webkit-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.56);
-    -moz-box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.56);
-    box-shadow: 10px 10px 15px 0px rgba(0,0,0,0.56);
-    /* I put the box shadow in using https://www.cssmatic.com/box-shadow */
-}
-
-#currentDescription{
-    height: 40vh;
-    width: 50%;
-    align-self: center; 
-    margin-right: 5%; 
-}
-
-#readingTitle{
-    font-size:2em; 
-    text-align: initial;
-    margin-top: 0; 
-    
-}
-
-.smallText{
-    font-family: 'Lato', sans-serif;
-    letter-spacing: 0.05em; 
-    font-size: 1.1em; 
-    line-height: 1.2em; 
-    margin-top: 5vh; 
-}
-
-.future{
-    font-weight: 200;
-    color: white;
-    font-size: 3em; 
-    letter-spacing: 1px; 
-    text-align: center; 
-    align-self: center;    
-}
-
-.arrow{
-    text-align: center;
-    font-size: 5em; 
-    color: white; 
-}
-
-.smallHero{
-
-    height: 30vh;
-    background-color: #00C9B6;  
-
-}
-
-.subHead{
-    padding-top: 10vh; 
-    text-align: center; 
-}
-
-#bookContainer{
-    /* margin-top: 10vh;  */
-    flex-wrap: wrap; 
-    margin-bottom: 10vh;  
-}  
-
-#book12019{
-    background-image: url(http://www.tor.com/wp-content/uploads/2016/08/WoK-branded-wallpaper-2560x1600.jpg); 
-}
-
-#book22019{
-    background-image: url(https://images-na.ssl-images-amazon.com/images/I/81L39uBd%2BvL.jpg);
-}
-
-#book32019{ 
-    background-image: url(https://images-na.ssl-images-amazon.com/images/I/518yp2iabGL._SX321_BO1,204,203,200_.jpg); 
-}
-
-#book42019{ 
-    background-image: url(https://images.thenile.io/r1000/9781423646792.jpg); 
-}
-
-#book52019{ 
-    background-image: url(https://akosmed.files.wordpress.com/2015/04/71jy-fvzel-_sl1500_.jpg); 
-}
-
-.booknoRepeat{
-    background-size: contain;
-    background-repeat:no-repeat; 
-    background-position: center; 
-}
-#book12018{ 
-    background-image: url(https://d28hgpri8am2if.cloudfront.net/book_images/cvr9781442370289_9781442370289_hr.jpg); 
-}
-
-#book22018{ 
-    background-image:url(https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1320532720i/100247._UY630_SR1200,630_.jpg);
-}
-
-#book32018{  
-    background-image: url(https://www.femalefirst.co.uk/image-library/land/1000/a/a-walk-in-the-woods-high-res-poster-2.jpg);  
-}
-
-#book42018{ 
-    background-image: url(https://www.mitchalbom.com/wp-content/uploads/2015/07/TheMagicStringsofFrankiePresto_Cover.jpg);
-}
-
-#book52018{
-    background-image:url(https://images-na.ssl-images-amazon.com/images/I/81AHYi-h3HL.jpg); 
-}
-
-#book62018{
-    background-image:url(https://kbimages1-a.akamaihd.net/6b84549c-2e16-42d8-9463-906a1897b750/1200/1200/False/we-were-soldiers-once-and-young.jpg); 
-}
-
-
-#book72018{
-    background-image:url(https://images-na.ssl-images-amazon.com/images/I/91bdye%2B2WvL.jpg); 
-}
-
-#book82018{
-    background-image:url(https://s3-us-west-2.amazonaws.com/tabs.web.media/b/h/bhyr/bhyr-square-orig.jpg); 
-}
-
-#book92018{
-    background-image:url(https://s3.amazonaws.com/libapps/accounts/98723/images/1984.png); 
-}
-
-#book102018{
-    background-image:url(https://www.ynharari.com/wp-content/uploads/2017/01/Kopertina-Homo-Deus-pg.jpg); 
-}
-    
-#book42019Descrip{
-    min-height: 50vh;
-}
-.bookTitle{
-    font-weight: 300;
-    color: #022F40;
-    font-size: 2em; 
-    letter-spacing: 1px;  
-     
-}
-
-.booksubTitle{
-    margin-top: 0.5vh; 
-    font-weight: 200;
-    color: #022F40;
-    font-size: 1.5em; 
-    letter-spacing: 1px; 
-}
-
-.bookDescrip{
-    font-family: 'Lato', sans-serif;
-    letter-spacing: 0.05em; 
-    font-size: 1.1em; 
-    line-height: 1.2em; 
-    margin-top: 5vh;
-}
-
-.bookBox{
-    width: 47.5%;
-    margin-top: 15vh;
-}
-
-.longBox{
-    width: 70%;
-    min-height: 20vh;   
-}
-
-.shortBox{
-    width: 25%; 
-    min-height: 20vh; 
-}
-
-#subHeadList{
-    background-color: #B5E2FA;  
-}
-#subHeadRight{
-    background-color: #F4D58D;
-}
-
-.small{
-    margin-top: 7vh;
-    color:white; 
-}
-
-.toReadTable{
-    table-layout:fixed; 
-    width: 100%; 
-    /* border-collapse: collapse;  */
-}
-
-.moreMargin{
-    margin-top: 5vh; 
-}
-th{
-    background-color: #FAC9B8;
-    /* border-bottom: 1px solid; 
-    border-top: 1px solid;  */
-}
-
-th, td{
-    padding: 2%; 
-    text-align: left; 
-}
-tr{
-    /* border-right: 1px solid;
-    border-left: 1px solid;  */
-}
-tr:nth-child(even) {
-    background-color: #FAFAFF;
-}
-tr:hover {
-    background-color: #00C9B6;
-}
-
-
-@media screen and (max-width: 1070px) {
-    .title {
-        font-size: 3em; 
+@media only screen and (max-width: 576px) {
+    .container {
+        width:100vw;
+        /* -webkit-transform:  translateY(-100%) rotate(90deg) ;
+        transform:  translateY(-100%) rotate(90deg);
+        -webkit-transform-origin: left bottom;
+        transform-origin: left bottom; 
+        margin-top:0; 
+        margin-bottom: 100% !important;  */
+        margin-top:0;  
     }
-    .subTitle{
-        font-size: 1em; 
+    .button{
+        height: 10vh;
     }
-    .stayBig{
+    .btn{
+        height:100%;
         font-size:2em; 
     }
-    .small{
-        margin-top:9vh; 
-    }
-}
+  }
 
-@media screen and (max-width: 930px) {
-    .smallText{
-        font-size:0.75em;
+  @media only screen and (max-width: 320px) {
+  
+    .btn{
+        font-size:1em; 
     }
-}
+  }
 
-@media screen and (max-width: 700px) {
-    .navButtons{
-        width:100%; 
+  @media only screen and (max-width: 240px) {
+    .btn{
+        font-size:0.5em; 
     }
-    .currentlyReading{
-        flex-direction:column; 
-    }
-    #readingTitle{
-        font-size: 1em; 
-        text-align: center; 
-    }
-    #bookImage{
-        margin: 0; 
-        margin-top: 1vh; 
-    }
-    #currentDescription{
-        margin: 0; 
-        margin-top: 5%;
-        width:100%;  
-    }
-    .smallText{
-        margin-top: 1vh; 
-    }
-    .bookTitle{
-        font-size: 1.5em; 
-    }
-    .booksubTitle{
-        font-size: 1em; 
-    }
-    .bookDescrip{
-        font-size: 0.75em; 
-    }
-    .bookBox{
-        margin-top: 5vh; 
-    }
-   
-}
-
-@media screen and (max-width: 535px) {
-    .title {
-        font-size: 2em; 
-    }
-    .subTitle{
-        font-size: 1em; 
-    }
-}
+  }
