--- a/mainStyles.css
+++ b/mainStyles.css
@@ -13,6 +13,12 @@ h1,h2{
     width:100vw;
 }
 
+#message{
+    font-size:0.75em;
+}
+#messageTwo{
+    font-size:0.75em;
+}
 .svgContainer {
     /*display: inline-block;*/
     /*position: relative;*/
@@ -22,18 +28,24 @@ h1,h2{
     overflow: visible;
 }
 
+.invisible{
+    visibility: hidden;
+}
+.visible{
+    visibility: visible;
+}
 #zoom{
     transition:opacity 1s linear;
 }
 
 #myChart{
     position:absolute;
-    left:30vw;
-    top:49vh;
+    left:26.5vw;
+    top:40vh;
     opacity: 0;
     /*height: 475px !important;*/
     height:auto !important;
-    width: 35vw !important;
+    width: 47vw !important;
 }
 #vis {
     position:absolute;
@@ -49,4 +61,21 @@ h1,h2{
     /*min-height: 500px;*/
     /*box-sizing: border-box;*/
     /*margin: auto;*/
+}
+
+@keyframes opacityChange {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.title{
+    animation: 3s ease-out 0s 1 opacityChange;
+}
+#secondTitle{
+    position: absolute;
+    top: 8vh;
 }
